--- a/sass/layout/_localisation.scss
+++ b/sass/layout/_localisation.scss
@@ -5,7 +5,7 @@
     text-align: center;
     @media (max-width: $phone) {
         padding: 2% 0;
-        font-size: 1rem;
+        font-size: .9rem;
     }
     .fa-solid {
         margin-right: 10px;
